--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,9 @@
 
 body{ background: #000;}
 
-/* home section  */
-.img-wrapper{ background:url('./assets/images/netflix-banner.jpg') center/cover no-repeat; }
+/* home image section  */
+.img-wrapper{ position:relative; background:url('./assets/images/netflix-banner.jpg') center/cover no-repeat;  min-height: 100vh; overflow: hidden;}
+.img-wrapper::before { content: ""; position: absolute; top: 0; left: 0; height: 100%; width: 100%; background: linear-gradient(to top, rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0)); z-index: 1; }
 
 /* movie image */
 .img-hover{   transition: transform 0.3s ease-in-out; cursor: pointer;}
